--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,13 @@
-
-
-
+<h1><%=@team.name%></h1>
+<ul>
+  <li>Team Motto: <%=@team.motto%></li>
+  <li>Hero Name: <%=@hero1.name%></li>
+  <li>Hero Power: <%=@hero1.power%></li>
+  <li>Hero Biography: <%=@hero1.bio%></li>
+  <li>Hero Name: <%=@hero2.name%></li>
+  <li>Hero Power: <%=@hero2.power%></li>
+  <li>Hero Biography: <%=@hero2.bio%></li>
+  <li>Hero Name: <%=@hero3.name%></li>
+  <li>Hero Power: <%=@hero3.power%></li>
+  <li>Hero Biography: <%=@hero3.bio%></li>
+</ul>
